fixed animations and aligntment

--- a/src/com/organisms/Navigation/Navigation.scss
+++ b/src/com/organisms/Navigation/Navigation.scss
@@ -43,13 +43,25 @@
 
   &-item {
     display: flex;
+    width: 100%;
 
+    a {
+      display: flex;
+      width: 100%;
+      text-decoration: none;
+    }
+
+    &__btn {
+      display: flex;
+      width: 100%;
+    }
     &__icon,
     &__icon-header {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-basis: 108px;
+      width: 108px;
     }
 
     &__text {
@@ -60,6 +72,7 @@
       font-family: 'Montserrat', sans-serif;
       font-size: 27px;
       color: white;
+      position: relative;
     }
   }
 }
